fixing sonar code smells