@@ -14,7 +14,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -28,7 +27,7 @@ public class ArticleService {
     public List<ArticleDTOWithTopics> findAllArticles() {
         return articleCustomRepository.findAllArticlesWithTopics().stream()
                 .map(Conversion::convertArticleToDTOWithTopics)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
@@ -107,6 +106,6 @@ public class ArticleService {
     public List<ArticleDTO> addMultipleArticles(final List<Article> articleList) {
         return articleList.stream()
                 .map(this::saveArticle)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
